<resources>
    <string name="app_name">Tietosuoja</string>
    <string name="new_game">New Game</string>
    <string name="settings">Settings</string>
    <string name="share_results">Share Best Scores</string>
    <string name="info">Info</string>
    <string name="Answer1">Answer 1</string>
    <string name="Answer2">Answer 2</string>
    <string name="Answer3">Answer 3</string>
    <string name="Answer4">Answer 4</string>
    <string name="scores">Scores:</string>
    <string name="share_facebook">Share On Facebook</string>
    <string name="share_email">Share With Email</string>
    <string name="back_to_main_menu">Back to the Main Menu</string>
    <string name="correct_answers">Correct Answers:</string>
    <string name="oops_wrong">Oops.. Wrong Answer :(</string>
    <string name="high_score">High Score:</string>
    <string name="rank_novice">You are: Tietosujanoviisi</string>
    <string name="rank_amatour">You are:</string>
    <string name="rank_knower">You are:</string>
    <string name="rank_master">You are:</string>
    <string name="rank_guru">You are:</string>
</resources>
