<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fi.xamk.tietosuoja.MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="Tietosuojalaki"
        android:textAlignment="center"
        android:textColor="?attr/colorAccent"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033" />


    <LinearLayout
        android:layout_width="235dp"
        android:layout_height="376dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        tools:layout_editor_absoluteY="80dp"
        tools:layout_editor_absoluteX="43dp">

        <Button
            android:id="@+id/newGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="startNewGameButtonPushed"
            android:text="@string/new_game"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="132dp" />

        <Button
            android:id="@+id/shareScoresButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="shareScoresButtonPushed"
            android:text="@string/share_results"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="248dp" />

        <Button
            android:id="@+id/settingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="304dp" />

        <Button
            android:id="@+id/infoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Ohje"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="359dp"
            tools:text="@string/info" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="89dp"
        android:layout_height="51dp"
        app:srcCompat="@drawable/logo_footer"
        android:layout_marginLeft="124dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        tools:layout_editor_absoluteY="542dp"
        tools:layout_editor_absoluteX="314dp" />

</android.support.constraint.ConstraintLayout>
